# kyara_esteves_sousa_embarcatech_HBr_2025

./: README.md
projects/blink/: CMakeLists.txt
projects/blink/app/: main.c
projects/blink/drivers/: led_embutido.c
projects/blink/hal/: hal_led.c
projects/blink/include/: hal_led.h  led_embutido.h
projects/contador-decrescente-com-registro-de-eventos-por-interrupcao/: CMakeLists.txt  main.c
projects/leitura-dos-sinais-analogicos-do-joystick/: CMakeLists.txt  main.c
projects/monitor-de-temperatura-interna-rp2040/: main.c
projects/testes_unitarios/: CMakeLists.txt
projects/testes_unitarios/app/: main.c
projects/testes_unitarios/hal/: temperature.c
projects/testes_unitarios/include/: temperature.h
projects/testes_unitarios/test/: test.c
